spec/tests/error/error-2.3.tcl
# Test: empty error message
catch {error ""} msg
puts "msg: '$msg'"
